# fxlayers

./: README.md  index.html  initializers.html  layers.html  pyproject.toml  search.json  settings.ini  sitemap.xml
.github/workflows/: test.yaml
Notebooks/: 00_layers.ipynb  01_initializers.ipynb  index.ipynb  nbdev.yml
_proc/: 00_layers.ipynb  index.ipynb
_proc/_docs/: robots.txt
fxlayers/: _modidx.py  initializers.py  layers.py
